# sagebase

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.cloudrun  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  SETUP_CHECKLIST.md  alembic.ini  justfile  pyproject.toml  pyrightconfig.json  robots.txt  sagebase.dbml  sitemap.xml
.claude/: implementation-plan.md  settings.json
.claude/agents/: clean-architecture-reviewer.md  requirements-reviewer.md
.claude/commands/: visualize-llm-flows.md
.github/workflows/: ci.yml  cleanup-cloudflare-previews.yml  cloudflare-preview-comment.yml  debug-baml-tests.yml  deploy-to-cloud-run.yml  deploy-worker.yml  docs-check.yml  hugo-build-check.yml  llm-evaluation.yml  test.yml
.serena/memories/: codebase_structure.md
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 001_baseline.py  002_example_add_column.py  003_update_proposals_schema.py  004_create_proposal_operation_logs.py  005_add_conference_id_to_proposal_submitters.py  006_create_proposal_judge_relations.py  007_reset_parliamentary_groups_sequence.py
baml_client/: __init__.py  async_client.py  config.py  globals.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py  watchers.py
baml_src/: clients.baml  generators.baml  member_extraction.baml  minutes_divider.baml  parliamentary_group_member_extractor.baml  politician_matching.baml  proposal_parliamentary_group_judge_extraction.baml  speaker_matching.baml  speaker_matching_tools.baml
data/evaluation/: README.md
database/: 02_run_migrations.sql  init.sql  init_ci.sql  seed_parliamentary_groups_generated.sql  seed_politicians_generated.sql
database/migrations/: 037_add_created_by_user_id_to_parliamentary_group_memberships.sql  038_create_extraction_logs.sql  041_drop_extracted_politicians_table.sql  042_remove_verification_fields_from_politicians.sql  043_create_politician_operation_logs.sql  046_create_proposal_submitters.sql  047_extend_proposal_parliamentary_group_judges.sql  048_create_proposal_judge_relations.sql  049_reset_parliamentary_groups_sequence.sql
docker/: Dockerfile  docker-compose.ci.yml  docker-compose.yml
docs/: CICD.md  CLEAN_ARCHITECTURE_MIGRATION.md  CLOUDFLARE_CLOUDRUN_INVESTIGATION.md  CLOUDFLARE_WORKERS_IMPLEMENTATION_PLAN.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  WEBSOCKET_TROUBLESHOOTING.md  cloudflare-cleanup.md  researchment_cloudflare_cloudrun_domain.md
docs/ADR/: 0001-clean-architecture-adoption.md  0002-baml-for-llm-outputs.md  0003-repository-pattern.md  0005-extraction-layer-gold-layer-separation.md  0006-alembic-migration-unification.md
docs/analysis/: extraction_matching_issues.md
docs/architecture/: APPLICATION_LAYER.md  ARCHITECTURE.md  CLEAN_ARCHITECTURE_MIGRATION.md  DOMAIN_LAYER.md  INFRASTRUCTURE_LAYER.md  INTERFACE_LAYER.md  README.md  database-design.md
docs/baml_migration/: investigation_results.md
docs/corporate/: README.md  定款.md
docs/design/: subgraph_architecture.md
docs/diagrams/: README.md  extraction-layer-architecture.mmd  extraction-log-data-flow.mmd  layer-dependency.mmd
docs/guides/: BI_DASHBOARD.md  CICD.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  OPERATIONS.md  TROUBLESHOOTING.md
scripts/: backup-database-gcs.py  check_async_await.py  generate_baml_client.sh  generate_governing_bodies_seed.py  load-seeds.sh  migrate_politicians_to_extracted.py  rollback.sh  setup-streamlit-secrets.sh  setup-worktree-ports.sh  verify_logging.py  verify_metrics.py  verify_metrics_simple.py  verify_monitoring.py
src/: __init__.py
src/common/: app_logic.py  database_utils.py  instrumentation.py  logging.py  metrics.py
src/conference_member_extractor/: baml_extractor.py  extractor.py
src/domain/: exceptions.py  pagination.py
src/evaluation/: __init__.py  metrics.py  runner.py
src/interfaces/: metrics_app.py
src/minutes_divide_processor/: minutes_divider_refactored.py  minutes_process_agent.py  models.py
src/parliamentary_group_member_extractor/: service.py
src/party_member_extractor/: baml_llm_extractor.py  factory.py  html_fetcher.py
src/services/: __init__.py  chain_factory.py  instrumented_llm_service.py  llm_factory.py  llm_service.py  migration_guide.md
src/utils/: README.md  gcs_storage.py
src/web_scraper/: __init__.py  (+5 more)
tests/: conftest.py  pytest.ini
website/: DEPLOYMENT.md  Dockerfile  build.sh  hugo.toml
workers/: worker.js  wrangler.toml
(+470 files in other folders)
