[project]
name = "sagebase"
version = "0.1.0"
description = ""
authors = [{ name = "okodoon", email = "31516823+okodoon@users.noreply.github.com" }]
requires-python = "~=3.13.0"
readme = "README.md"
dependencies = [
    "langchain-google-genai>=2.0.11,<3",
    "langchain>=0.3.20,<0.4",
    "langgraph>=0.3.5,<0.4",
    "pypdfium2>=4.30.0,<4.30.1",
    "python-dotenv>=1.0.1,<2",
    "duckdb>=1.2.1,<2",
    "pytest>=8.3.5,<9",
    "psycopg2-binary>=2.9.0,<3",
    "asyncpg>=0.29.0,<1",
    "sqlalchemy>=2.0.0,<3",
    "click>=8.0.0,<9",
    "streamlit>=1.42.0,<2",
    "authlib>=1.3.2,<2",
    "selenium>=4.0.0,<5",
    "playwright>=1.40.0,<2",
    "beautifulsoup4>=4.12.0,<5",
    "baml-py==0.216.0",
    "aiohttp>=3.9.0,<4",
    "requests>=2.31.0,<3",
    "google-cloud-storage>=2.10.0,<3",
    "plotly>=5.18.0,<6",
    "pandas>=2.0.0,<3",
    "folium>=0.15.0,<1",
    "streamlit-folium>=0.17.0,<1",
    "pydantic>=2.0.0,<3",
    "structlog>=24.0.0,<25",
    "opentelemetry-api>=1.24.0,<2",
    "opentelemetry-sdk>=1.24.0,<2",
    "opentelemetry-instrumentation>=0.45b0,<1",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0,<1",
    "opentelemetry-instrumentation-requests>=0.45b0,<1",
    "opentelemetry-instrumentation-aiohttp-client>=0.45b0,<1",
    "opentelemetry-exporter-prometheus>=0.45b0,<1",
    "prometheus-client>=0.19.0,<1",
    "fastapi>=0.110.0,<1",
    "uvicorn>=0.27.0,<1",
    "sentry-sdk>=2.19.0,<3",
    "dependency-injector>=4.41.0,<5",
    "nest-asyncio>=1.6.0,<2",
    "google-auth>=2.0.0,<3",
    "google-auth-oauthlib>=1.0.0,<2",
    "streamlit-oauth>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "bandit[toml]>=1.7.5",
    "pip-audit>=2.6.0",
]

[project.scripts]
sagebase = "src.interfaces.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "baml_client"]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."
addopts = "-v --cov=src --cov-report=html --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "evaluation: marks tests as LLM evaluation tests (skipped in CI)",
    "baml: marks tests as BAML-related tests (run in separate BAML CI)",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.8.0",
    "pyright>=1.1.387",
    "pre-commit>=3.5.0",
    "aiosqlite>=0.21.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".claude/skills/*/templates/*",  # Exclude skill template files
    "baml_client/*",  # Exclude BAML-generated client code
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
]
ignore = [
    "N999",  # Invalid module name - StreamlitページでJapanese namesを許可
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-between-types = 1
no-lines-before = ["local-folder"]
lines-after-imports = 2
forced-separate = ["src"]

[tool.ruff.lint.per-file-ignores]
# Ignore E501 (line too long) for debug print statements
"src/application/usecases/scrape_politicians_usecase.py" = ["E501"]
"src/domain/services/link_analysis_domain_service.py" = ["E501"]
"src/infrastructure/di/providers.py" = ["E501"]
"src/infrastructure/external/langgraph_nodes/decision_node.py" = ["E501"]
"src/infrastructure/external/langgraph_nodes/explore_children_node.py" = ["E501"]
"src/infrastructure/external/langgraph_party_scraping_agent_with_classification.py" = ["E501"]
"src/interfaces/web/streamlit/presenters/political_party_presenter.py" = ["E501"]

# Pyright configuration moved to pyrightconfig.json

[tool.bandit]
exclude_dirs = ["tests", "*/test_*.py", "*/conftest.py"]
skips = ["B101", "B601", "B603", "B607"]
severity = "low"
confidence = "low"
